--- a/ChristinaMangapuro/index.html
+++ b/ChristinaMangapuro/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>ChristinaMangapuro</title>
+    <link rel = "icon" href = "images/title_icon.png" type = "image/x-icon">
     <!--CSS Files to include-->
     <link href="index.css" rel='stylesheet' type='text/css'>
     <!--Fonts to include-->
