--- a/ChristinaMangapuro/index.html
+++ b/ChristinaMangapuro/index.html
@@ -64,7 +64,7 @@
                     </li>
 
                     <li>
-                        <a href="">
+                        <a href="https://kwengxsna.github.io/christina_resume/ChristinaMangapuro">
                             <div class="work_thumbnail" style="background-image:url('images/title_icon.png')"></div>
                             <h3>Personal Website</h3>
                         </a>
